--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	</head>
 	<body>
 		<div id="dialog" style="border: 2px solid;">
+            <p>最难消解昨夜长风当时明月此事古难全</p>
             <p>此处将显示您的对话消息</p>
 		</div>
 		<div id="control">
