完成前端骨架

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 			</p>
 			<p>
 				<a>消息</a><input id="message" type="text" />
-				<button id="submit" onclick="onClickSubmit()">使用昵称并加入房间 / 发送消息</button>
+				<button id="submit" onclick="onClickSubmit()">发送消息</button>
 			</p>
 		</div>
 	</body>
