--- a/index.html
+++ b/index.html
@@ -8,11 +8,10 @@
 	</head>
 	<body>
 		<div id="dialog" style="border: 1px solid;">
-			<p>最难消解昨夜长风当时明月此事古难全</p>
-			<p>此处将显示您的对话消息</p>
+			<!-- 此处显示对话历史记录 -->
 		</div>
 		<div style="border: 1px solid;">
-			<p id="status">此处显示您与服务器的连接质量</p>
+			<p id="status"><!-- 此处显示与服务器的连接状态等信息 --></p>
 		</div>
 		<div id="control">
 			<p>
@@ -21,7 +20,7 @@
 			</p>
 			<p>
 				<a>消息</a><input id="message" type="text" />
-				<button id="submit" onclick="onClickSubmit()">发送消息</button>
+				<button id="submit" onclick="onClickSubmitButton()">发送消息</button>
 			</p>
 		</div>
 	</body>
