--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta charset="utf-8" />
+		<meta charset="UTF-8" />
 		<title>聊天室</title>
 		<script src="https://cdn.jsdelivr.net/npm/jquery@3/dist/jquery.min.js"></script>
-		<script charset="utf-8" src="script.js"></script>
+		<script charset="UTF-8" src="crawler.js"></script>
+		<script charset="UTF-8" src="script.js"></script>
 	</head>
 	<body>
 		<div id="dialog" style="border: 1px solid;">
